--- a/pages/thanh-toan.html
+++ b/pages/thanh-toan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- Sửa infor-for-banking ở dòng 584  -->
 
 <head>
   <meta charset="utf-8" />
@@ -12,11 +13,10 @@
   <link rel="stylesheet" href="../src/css/searchAdvanceMobile.css" />
   <!-- JS  -->
   <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../src/js/Trang_chu.js"></script>
-  <script src="../src/js/trang-chu-02.js"></script>
   <script src="../src/js/main.js"></script>
   <script src="../src/js/search-common.js"></script>
   <script src="../src/js/onOffSeacrhAdvance.js"></script>
+  <script src="../src/js/thanh-toan.js"></script>
   <title>Hoàn tất thanh toán</title>
 </head>
 
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-cham">
-                  <img src="./assets/images/CAY5.jpg" alt="Cây phát tài" />
+                  <img src="../assets/images/CAY5.jpg" alt="Cây phát tài" />
                   <div class="p-details">
                     <h2>Cây phát tài</h2>
                     <h3>750.000 vnđ</h3>
@@ -132,7 +132,7 @@
 
                 <!-- OK  -->
                 <div class="product" data-category="cay-van-phong">
-                  <img src="./assets/images/CAY6.jpg" alt="Cây kim ngân" />
+                  <img src="../assets/images/CAY6.jpg" alt="Cây kim ngân" />
                   <div class="p-details">
                     <h2>Cây kim ngân</h2>
                     <h3>280.000 vnđ</h3>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY7.jpg" alt="Cây trầu bà" />
+                  <img src="../assets/images/CAY7.jpg" alt="Cây trầu bà" />
                   <div class="p-details">
                     <h2>Cây trầu bà</h2>
                     <h3>120.000 vnđ</h3>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="product" data-category="cay-duoi-nuoc">
-                  <img src="./assets/images/CAY8.jpg" alt="Cây lan chi" />
+                  <img src="../assets/images/CAY8.jpg" alt="Cây lan chi" />
                   <div class="p-details">
                     <h2>Cây lan chi</h2>
                     <h3>120.000 vnđ</h3>
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
+                  <img src="../assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
                   <div class="p-details">
                     <h2>Cây trầu bà đỏ</h2>
                     <h3>320.000 vnđ</h3>
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
+                  <img src="../assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
                   <div class="p-details">
                     <h2>Cây lưỡi hổ</h2>
                     <h3>750.000 vnđ</h3>
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
+                  <img src="../assets/images/CAY11.jpg" alt="Cây lưỡi hổ vàng" />
                   <div class="p-details">
                     <h2>Cây lưỡi hổ vàng</h2>
                     <h3>160.000 vnđ</h3>
@@ -180,7 +180,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
+                  <img src="../assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
                   <div class="p-details">
                     <h2>Cây hạnh phúc</h2>
                     <h3>1.200.000 vnđ</h3>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY13.jpg" alt="Cây trầu bà châu lớn" />
+                  <img src="../assets/images/CAY13.jpg" alt="Cây trầu bà châu lớn" />
                   <div class="p-details">
                     <h2>Cây trầu bà châu lớn</h2>
                     <h3>1.100.000 vnđ</h3>
@@ -196,14 +196,14 @@
                 </div>
 
                 <div class="product" data-category="cay-van-phong">
-                  <img src="./assets/images/CAY14.jpg" alt="Cây phát tài DORADO" />
+                  <img src="../assets/images/CAY14.jpg" alt="Cây phát tài DORADO" />
                   <div class="p-details">
                     <h2>Cây phát tài DORADO</h2>
                     <h3>220.000 vnđ</h3>
                   </div>
                 </div>
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY16.jpg" alt="Cây vạn lộc" />
+                  <img src="../assets/images/CAY16.jpg" alt="Cây vạn lộc" />
                   <div class="p-details">
                     <h2>Cây vạn lộc</h2>
                     <h3>1.150.000 vnđ</h3>
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="product" data-category="cay-de-ban">
-                  <img src="./assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
+                  <img src="../assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
                   <div class="p-details">
                     <h2>Cây ngọc vừng</h2>
                     <h3>1.750.000 vnđ</h3>
@@ -432,170 +432,155 @@
     </div>
   </div>
 
-  <!-- ARTICLE -->
-  <div class="article">
-    <div class="title-cart">
-      <p class="text-success h1 text-center text-uppercase">Thanh toán</p>
-    </div>
-    <div class="infor-order bg-light">
-      <div class="status-order">
-        <img class="cart-2" src="../assets/images/cart.svg" alt="cart" />
-        <hr />
-        <img src="../assets/images/id-card.svg" class="id-01" alt="id-card" />
-        <hr />
-        <img src="../assets/images/circle-check.svg" alt="ccheck" />
-      </div>
-
-      <div class="enter-infor">
-        <div class="choose-01 d-flex flex-row">
-          <input type="radio" name="choice" id="use-default-information" class="macdinh" />Sử dụng thông tin mặc định
+  <main>
+    <div class="container">
+      <h2>THANH TOÁN</h2>
+      <div class="content">
+        <div class="status-order">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <hr style="border: 1px dashed black; width: 15%;">
+          <i style="color: green;" class="fa-solid fa-id-card"></i>
+          <hr style="border: 1px dashed black; width: 15%;">
+          <i class="fa-solid fa-circle-check"></i>
+        </div>
+        <div class="option-address">
+          <label for="">
+            <input type="radio" name="chon" id="default-information" checked> <span>Sử dụng thông tin mặc
+              định</span>
+          </label>
+          <label for="">
+            <input type="radio" name="chon" id="new-information"> <span>Nhập thông tin mới</span>
+          </label>
         </div>
 
-        <div class="choose-02 d-flex flex-row">
-          <input type="radio" name="choice" id="use-new-informaion" />Nhập
-          thông tin mới
-        </div>
-      </div>
-
-      <form id="new-information" action="" class="form__new-information"
-        style="display: none; flex-direction: column; font-weight: bold">
-        <div class="d-flex flex-column">
-          <label for="">Tên người nhận</label>
-          <input type="text" placeholder="Tên người nhận" name="" id="" />
-        </div>
-        <div class="d-flex flex-column">
+        <form action="" id="default-information-form">
+          <label for="">Tên người dùng</label>
+          <input type="text" name="name" id="name" placeholder="Nguyễn Phước Sang" disabled>
           <label for="">Email</label>
-          <input type="email" placeholder="Email" name="" id="" />
-        </div>
-        <div class="d-flex flex-column">
-          <label for="">Địa chỉ</label>
-          <input type="text" placeholder="Địa chỉ" name="" id="" />
-        </div>
-        <div class="d-flex flex-column">
+          <input type="email" name="email" id="email" placeholder="sangnguyen20050916@gmail.com" disabled>
           <label for="">Số điện thoại</label>
-          <input type="text" placeholder="Số điện thoại" name="" id="" />
-        </div>
-      </form>
+          <input type="text" name="sdt" id="sdt" placeholder="0366679203" disabled>
+          <label for="">Địa chỉ</label>
+          <input type="text" name="diachi" id="diachi" placeholder="103a Phan Huy Ích, Phường 11, Quận 12, TP.HCM"
+            disabled>
+        </form>
 
-      <form style="display: none; flex-direction: column; font-weight: bold" id="default-information" action=""
-        class="form__default-information">
-        <div class="d-flex flex-column">
-          <label for="">Tên người nhận</label>
-          <input type="text" name="" id="" placeholder="Nguyễn Phước Sang" disabled />
-        </div>
-        <div class="d-flex flex-column">
+        <form action="" id="new-information-form">
+          <label for="">Tên người dùng</label>
+          <input type="text" name="name" id="new-name" placeholder="Họ và tên">
           <label for="">Email</label>
-          <input type="email" name="" id="" placeholder="sangnguyen@gmail.com" disabled />
-        </div>
-        <div class="d-flex flex-column">
-          <label for="">Địa chỉ</label>
-          <input type="text" placeholder="103A Phan Huy Ích, Phường 15, Quận Gò Vấp, TP.HCM" name="" id="" disabled />
-        </div>
-        <div class="d-flex flex-column">
+          <input type="email" name="email" id="new-email" placeholder="Email">
           <label for="">Số điện thoại</label>
-          <input type="text" placeholder="0937466473" name="" id="" disabled />
-        </div>
-      </form>
+          <input type="text" name="sdt" id="new-sdt" placeholder="Số điện thoại">
+          <label for="">Địa chỉ</label>
+          <input type="text" name="diachi" id="new-diachi" placeholder="Địa chỉ">
+        </form>
 
-      <div class="infor-goods">
-        <hr style="border: 3px dashed green; width: 100%" />
-        <div class="order">
-          <div class="order-img">
-            <img src="../assets/images/CAY5.jpg" alt="Phat tai" />
-          </div>
-          <div class="frame">
-            <div class="name-price">
-              <p><strong>Cây phát tài</strong></p>
-              <p><strong>750.000đ</strong></p>
+        <div class="infor-goods">
+          <hr style="border: 3px dashed green; width: 100%" />
+          <div class="order">
+            <div class="order-img">
+              <img src="../assets/images/CAY5.jpg" alt="Phat tai" />
             </div>
+            <div class="frame">
+              <div class="name-price">
+                <p><strong>Cây phát tài</strong></p>
+                <p><strong>750.000đ</strong></p>
+              </div>
 
-            <div class="function">
-              <!-- Button trigger modal -->
-              <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                style="width: 53px">
-                <img src="../assets/images/trash.svg" alt="trash" />
-              </button>
+              <div class="function">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  style="width: 53px">
+                  <i class="fa-solid fa-trash"></i>
+                </button>
 
-              <!-- Modal -->
-              <div class="modal fade w-100" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">
-                        Thông báo
-                      </h1>
-                      <button type="button" class="btn-close" style="width: 10%" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body d-flex justify-content-center align-items-center">
-                      Bạn có chắc muốn xóa sản phẩm chứ!
-                    </div>
-                    <div class="modal-footer d-flex flex-row">
-                      <button type="button" class="btn btn-secondary" style="width: 20%" data-bs-dismiss="modal">
-                        Đóng
-                      </button>
-                      <button type="button" class="btn btn-primary" style="width: 45%">
-                        Xóa
-                      </button>
+                <!-- Modal -->
+                <div class="modal fade w-100" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                  aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">
+                          Thông báo
+                        </h1>
+                        <button type="button" class="btn-close" style="width: 10%" data-bs-dismiss="modal"
+                          aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body d-flex justify-content-center align-items-center">
+                        Bạn có chắc muốn xóa sản phẩm chứ!
+                      </div>
+                      <div class="modal-footer d-flex flex-row">
+                        <button type="button" class="btn btn-secondary" style="width: 20%" data-bs-dismiss="modal">
+                          Đóng
+                        </button>
+                        <button type="button" class="btn btn-primary" style="width: 45%">
+                          Xóa
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
 
-              <!-- Nút xóa và thêm số lượng sản phẩm  -->
-              <div class="add-del">
-                <div class="oder">
-                  <div class="wrapper">
-                    <span class="minus">-</span>
-                    <span class="num">01</span>
-                    <span class="plus">+</span>
+                <!-- Nút xóa và thêm số lượng sản phẩm  -->
+                <div class="add-del">
+                  <div class="oder">
+                    <div class="wrapper">
+                      <span class="minus">-</span>
+                      <span class="num">01</span>
+                      <span class="plus">+</span>
+                    </div>
+                    <script src="../src/js/san-pham.js"></script>
                   </div>
-                  <script src="../src/js/san-pham.js"></script>
                 </div>
               </div>
             </div>
           </div>
+          <hr style="border: 3px dashed green; width: 100%" />
         </div>
-        <hr style="border: 3px dashed green; width: 100%" />
-      </div>
 
-      <div class="enter-infor-02 gap-lg-3 d-flex flex-column justify-content-start">
-        <div class="choose-02-01 d-flex flex-row">
-          <input type="radio" name="radio" />Thanh toán khi nhận hàng
+        <div class="payment-method">
+          <label for="">
+            <input type="radio" name="paymentMehtod" id="cod-button"> <span>Thanh toán khi nhận hàng</span>
+          </label>
+          <label for="">
+            <input type="radio" name="paymentMehtod" id="banking-button"> <span>Chuyển khoản</span>
+          </label>
         </div>
-        <div class="choose-02-02 d-flex flex-row">
-          <input type="radio" name="radio" id="checked" />
-          <label for="checked">Thanh toán qua ngân hàng</label>
+
+
+        <div class="card-type">
+          <i class="fa-brands fa-cc-visa" id="mastercard" alter="thẻ visa"></i>
+          <i class="fa-solid fa-credit-card" alter="thẻ tín dụng"></i>
         </div>
-      </div>
-
-      <!-- Icon mc và visa  -->
-      <div class="img-icon-pay d-flex flex-row">
-        <div class="img-icon-pay d-flex flex-row">
-          <input hidden class="display-infor-for-banking" type="checkbox" id="ticked" />
-          <img id="mastercard" src="../assets/images/mastercard.svg" alt="mastercard" />
-          <img src="../assets/images/visa.svg" alt="" />
+        <!-- Form chuyển khoản  -->
+        <form action="" id="banking-form">
+          <h2>Liên kết thẻ</h2>
+          <label>Thông tin thẻ</label>
+          <input type="text" placeholder="1234 1234 1234 1234">
+          <input type="text" placeholder="MM / YY" style="width: 48%; display: inline-block;">
+          <input type="text" placeholder="CVC" style="width: 48%; display: inline-block; float: right;">
+          <label>Tên chủ thẻ</label>
+          <input type="text" placeholder="Full name on card">
+          <label>Địa chỉ</label>
+          <select>
+            <option>Vietnam</option>
+          </select>
+          <input type="text" placeholder="Địa chỉ 1">
+          <input type="text" placeholder="Địa chỉ 2">
+          <input type="text" placeholder="Thành phố">
+          <input type="text" placeholder="Tỉnh">
+          <input type="text" placeholder="Mã bưu điện">
+          <button class="subscribe-btn">Đăng ký</button>
+        </form>
+        <div class="payment-button">
+          <button type="button" class="btn btn-success" id="payment-button">Thanh toán</button>
         </div>
-      </div>
-
-      <!-- thông tin chuyển khoản  -->
-      <div id="inforBanking" class="infor-for-banking text-wrap text-start fs-4">
-        <input type="text" placeholder="Số tài khoản" />
-        <input type="text" placeholder="Mã thẻ" />
-      </div>
-
-      <div class="frame-2">
-        <div class="thanh-tien">Tạm tính: 750.000đ</div>
-      </div>
-      <div class="dat-hang">
-        <a href="hoan-tat.html"><button type="button" class="btn btn-success text-uppercase">
-            thanh toán
-          </button></a>
-        <a href="gio-hang.html" style="text-decoration: none; margin-top: 2em">Quay lại</a>
       </div>
     </div>
-  </div>
+
+    </div>
+  </main>
 
   <!-- FOOTER  -->
   <footer>
