--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./src/css/searchAdvanceMobile.css" />
   <!-- JS  -->
   <script src="./src/js/tim-kiem-nang-cao.js"></script>
+  <script src="./src/js/main.js"></script>
   <script src="./assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="./src/js/onOffSeacrhAdvance.js"></script>
   <script src="./src/js/search.js"></script>
