update history page
thêm trang history

--- a/pages/user-history-details.html
+++ b/pages/user-history-details.html
@@ -460,36 +460,65 @@
               <thead>
                 <tr>
                   <th></th>
-                  <th>Số đơn hàng</th>
-                  <th>Tổng tiền(đ)</th>
+                  <th>SỐ LƯỢNG</th>
+                  <th>THÀNH TIỀN (đ)</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>
+                    <img src="../../assets/images/CAY2.PNG" alt="Product Image">
                     <div class="product-info">
-                      <span class="product-name">#f111</span><br>
+                      <span class="product-name">Cay j ko bt ten</span><br>
+                      <span class="sku">SKU: QJ-0001</span><br>
                     </div>
                   </td>
                   <td>1</td>
-                  <td>1,100,000</td>
+                  <td>1,100,000 đ</td>
                 </tr>
                 
                 <tr>
                   <td>
+                    <img src="../../assets/images/CAY1.PNG" alt="Product Image">
                     <div class="product-info">
-                      <span class="product-name">#f112</span><br>
+                      <span class="product-name">Chac cay xuong rong</span><br>
+                      <span class="sku">SKU: JJ-0001</span><br>
                     </div>
                   </td>
                   <td>1</td>
 
-                  <td>550,000</td>
+                  <td>550,000 đ</td>
                 </tr>
               </tbody>
             </table>
 
           </div>
         </div>
+      </div>
+    </div>
+    <div class="section payment">
+      <div class="section-header">
+        <span>Thanh Toán: </span>
+      </div>
+      <div class="payment-details">
+        <div class="payment-row">
+          <span>Số lượng sản phẩm: </span>
+          <span>2</span>
+        </div>
+        <div class="payment-row">
+          <span>Tổng tiền hàng:</span>
+          <span>1,650,000 đ</span>
+        </div>
+        <div class="payment-row">
+          <span>Vận chuyển:</span>
+          <span>20,000 đ</span>
+        </div>
+        <div class="payment-row paid">
+          <span>Đã thanh toán</span>
+          <span>1,505,000 đ</span>
+        </div>
+
+
       </div>
     </div>
   </div>
