sưa giao dien trang hoan tat

--- a/pages/gio-hang.html
+++ b/pages/gio-hang.html
@@ -505,7 +505,8 @@
         </div>
       </div>
       <div class="dat-hang">
-        <button onclick="clickCart()" type="button" class="btn btn-success">ĐẶT HÀNG</button>
+        <button onclick="clickCart()" type="button" class="btn btn-success" style="width: 185px;
+    height: 50px;">ĐẶT HÀNG</button>
       </div>
       <div class="text">
         <!-- quay về trang chủ  -->
