--- a/pages/thanh-toan.html
+++ b/pages/thanh-toan.html
@@ -574,9 +574,11 @@
           <button class="subscribe-btn">Đăng ký</button>
         </form>
         <div class="payment-button">
-          <a href="../pages/.."><button type="button" class="btn btn-success" id="payment-button">Thanh
-              toán</button></a>
+          <a href="../pages/.."><button type="button" class="btn btn-success" id="payment-button" style="width: 185px;
+    height: 50px;">THANH TOÁN</button></a>
         </div>
+        <a href="../index.html" style="text-decoration: none;
+        margin-bottom: 5px;">Tiếp tục mua hàng</a>
       </div>
     </div>
 
