--- a/pages/user-History.html
+++ b/pages/user-History.html
@@ -459,9 +459,10 @@
 
               <thead>
                 <tr>
-                  <th></th>
+                  <th>Mã hóa đơn</th>
                   <th>Số đơn hàng</th>
                   <th>Tổng tiền(đ)</th>
+                  <th>Ngày giao</th>
                 </tr>
               </thead>
               <tbody>
@@ -473,6 +474,7 @@
                   </td>
                   <td>1</td>
                   <td>1,100,000</td>
+                  <td>1/1/2025</td>
                 </tr>
                 
                 <tr>
@@ -482,8 +484,8 @@
                     </div>
                   </td>
                   <td>1</td>
-
                   <td>550,000</td>
+                  <td>2/2/2025</td>
                 </tr>
               </tbody>
             </table>
