--- a/pages/gio-hang.html
+++ b/pages/gio-hang.html
@@ -460,7 +460,7 @@
             <!-- Button trigger modal -->
             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
               style="width: 53px; height: 33px;">
-              <img src="../assets/images/trash.svg" alt="trash">
+              <i class="fa-solid fa-trash" style="font-size: 25px;"></i>
             </button>
 
             <!-- Modal -->
@@ -506,9 +506,9 @@
       </div>
       <div class="dat-hang">
         <button onclick="clickCart()" type="button" class="btn btn-success" style="width: 185px;
-    height: 50px;">ĐẶT HÀNG</button>
+    height: 50px; margin: 10px 0 15px 0;">ĐẶT HÀNG</button>
       </div>
-      <div class="text">
+      <div class="text" style="margin-bottom: 10px;">
         <!-- quay về trang chủ  -->
         <a style="text-decoration: none;" href="../index.html">Tiếp tục mua hàng</a>
       </div>
