--- a/pages/thanh-toan.html
+++ b/pages/thanh-toan.html
@@ -433,7 +433,7 @@
   </div>
 
   <main>
-    <div class="container">
+    <div class="container-payment">
       <h2>THANH TOÁN</h2>
       <div class="content">
         <div class="status-order">
@@ -492,7 +492,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
                   style="width: 53px">
-                  <i class="fa-solid fa-trash"></i>
+                  <i class="fa-solid fa-trash" style="font-size: 25px;"></i>
                 </button>
 
                 <!-- Modal -->
@@ -574,11 +574,11 @@
           <button class="subscribe-btn">Đăng ký</button>
         </form>
         <div class="payment-button">
-          <a href="../pages/.."><button type="button" class="btn btn-success" id="payment-button" style="width: 185px;
+          <a href="../pages/hoan-tat.html"><button type="button" class="btn btn-success" id="payment-button" style="width: 185px;
     height: 50px;">THANH TOÁN</button></a>
         </div>
         <a href="../index.html" style="text-decoration: none;
-        margin-bottom: 5px;">Tiếp tục mua hàng</a>
+        margin-bottom: 10px;">Tiếp tục mua hàng</a>
       </div>
     </div>
 
