--- a/admin/index/homePage.html
+++ b/admin/index/homePage.html
@@ -65,7 +65,7 @@
                   <p style="color: black;text-align: center; font-size: 10x;">Khách hàng</p>
                 </div>
               </a>
-              <a href="orderPage.html" style="text-decoration: none; color: black;">
+              <a href="orderPage1.php" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection" >
                     <i class="fa-solid fa-list-check" style="
@@ -76,7 +76,7 @@
                   <p style="color:black">Đơn hàng</p>
                 </div>
               </a>
-              <a href="analyzePage.html" style="text-decoration: none; color: black;">
+              <a href="analyzePage.php" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection" >
                     <i class="fa-solid fa-chart-simple" style="
@@ -200,7 +200,7 @@
               <p>Khách hàng</p>
             </div>
             </a>
-            <a href="orderPage.html" style="text-decoration: none; color: black;">
+            <a href="orderPage1.php" style="text-decoration: none; color: black;">
               <div class="container-function-selection">
                 <button class="button-function-selection" >
                   <i class="fa-solid fa-list-check" style="
@@ -211,7 +211,7 @@
                 <p>Đơn hàng</p>
               </div>
             </a>
-            <a href="analyzePage.html" style="text-decoration: none; color: black;">
+            <a href="analyzePage.php" style="text-decoration: none; color: black;">
               <div class="container-function-selection">
                 <button class="button-function-selection">
                   <i class="fa-solid fa-chart-simple" style="
